# WebsiteEmpire2

./: .gitignore  CLAUDE.md  CMakeLists.txt  common.cmake  fix_corrupted_symptoms.py
StaticWebsiteServe/: CMakeLists.txt  main.cpp
StaticWebsiteServe/controllers/: ImageController.cpp  ImageController.h  PageController.cpp  PageController.h  StatsController.cpp  StatsController.h
StaticWebsiteServeLib/: CMakeLists.txt  VariantSelector.cpp  VariantSelector.h
StaticWebsiteServeLib/db/: ContentDb.cpp  ContentDb.h  ImageDb.cpp  ImageDb.h  StatsDb.cpp  StatsDb.h
StaticWebsiteServeLib/model/: ImageRecord.h  MenuFragmentRecord.h  PageRecord.h  PageVariantRecord.h  RedirectRecord.h
StaticWebsiteServeLib/repository/: IImageRepository.h  IMenuRepository.h  IPageRepository.h  IRedirectRepository.h  IStatsReader.h  IStatsWriter.h  ImageRepositorySQLite.cpp  ImageRepositorySQLite.h  MenuRepositorySQLite.cpp  MenuRepositorySQLite.h  PageRepositorySQLite.cpp  PageRepositorySQLite.h  RedirectRepositorySQLite.cpp  RedirectRepositorySQLite.h  StatsWriterSQLite.cpp  StatsWriterSQLite.h
StaticWebsiteServeTests/: CMakeLists.txt  test_content_db.cpp  test_image_controller.cpp  test_page_controller.cpp  test_repositories.cpp  test_stats_writer.cpp  test_variant_selector.cpp
WebsiteAspire/: CMakeLists.txt  main.cpp
WebsiteAspire/gui/: MainWindow.ui  gui.cmake
WebsiteAspire/gui/dialog/: DialogViewAttributes.cpp  DialogViewAttributes.h  DialogViewAttributes.ui  dialog.cmake
WebsiteAspire/gui/panes/: PaneAspire.cpp  PaneAspire.h  PaneAspire.ui  PaneDatabaseGen.cpp  PaneDatabaseGen.h  PaneDatabaseGen.ui  WidgetDownloader.cpp  WidgetDownloader.h  WidgetDownloader.ui  WidgetGenerator.cpp  WidgetGenerator.h  WidgetGenerator.ui  panes.cmake
WebsiteAspire/launcher/: AbstractLauncher.cpp  AbstractLauncher.h  ClaudeRunner.cpp  ClaudeRunner.h  LancherGenerator.cpp  LancherGenerator.h  LauncherDownload.cpp  LauncherDownload.h  LauncherRunJobs.cpp  LauncherRunJobs.h  launcher.cmake
WebsiteAspireTests/: CMakeLists.txt  test_aspired_db.cpp  test_downloaded_pages_table.cpp  test_downloader_pradize.cpp  test_downloader_vogelvoerkopen.cpp  test_generator_factories.cpp  test_generator_health.cpp  test_generator_languages.cpp  test_page_attributes.cpp  test_params_model.cpp
WebsiteEmpire/: CMakeLists.txt  main.cpp
WebsiteEmpire/gui/: MainWindow.cpp  MainWindow.h  MainWindow.ui  gui.cmake
WebsiteEmpire/gui/dialogs/: DialogAddGeneration.cpp  DialogAddGeneration.h  DialogAddGeneration.ui  DialogAddUpdatePrompt.cpp  DialogAddUpdatePrompt.h  DialogAddUpdatePrompt.ui  DialogAddUpdateStrategy.cpp  DialogAddUpdateStrategy.h  DialogAddUpdateStrategy.ui  DialogEditHosts.cpp  DialogEditHosts.h  DialogEditHosts.ui  DialogGeneratePhase2.cpp  DialogGeneratePhase2.h  DialogGeneratePhase2.ui  DialogPickArticlesToReset.cpp  DialogPickArticlesToReset.h  DialogPickArticlesToReset.ui  DialogPickArticlesToUpdate.cpp  DialogPickArticlesToUpdate.h  DialogPickArticlesToUpdate.ui  DialogPickEngine.cpp  DialogPickEngine.h  DialogPickEngine.ui  DialogPreviewPage.cpp  DialogPreviewPage.h  DialogPreviewPage.ui  DialogShowCommand.cpp  DialogShowCommand.h  DialogShowCommand.ui  DialogViewUpdatedArticles.cpp  DialogViewUpdatedArticles.h  DialogViewUpdatedArticles.ui
WebsiteEmpire/gui/panes/: GenStrategyTable.cpp  GenStrategyTable.h  PaneDomains.cpp  PaneDomains.h  PaneDomains.ui  PaneGeneratedPages.cpp  PaneGeneratedPages.h  PaneGeneratedPages.ui  PaneGeneration.cpp  PaneGeneration.h  PaneGeneration.ui  PaneMenus.cpp  PaneMenus.h  PaneMenus.ui  PanePageStats.cpp  PanePageStats.h  PanePageStats.ui  PanePages.cpp  PanePages.h  PanePages.ui  PaneSettings.cpp  PaneSettings.h  PaneSettings.ui  PaneTaxonomies.cpp  PaneTaxonomies.h  PaneTheme.cpp  PaneTheme.h  PaneTheme.ui  (+8 more)
WebsiteEmpire/launcher/: AbstractLauncher.cpp  AbstractLauncher.h  LauncherGeneration.cpp  LauncherGeneration.h  LauncherImprove.cpp  LauncherImprove.h  LauncherPublish.cpp  LauncherPublish.h  LauncherReview.cpp  LauncherReview.h  LauncherTranslate.cpp  LauncherTranslate.h  LauncherTranslateCommon.cpp  LauncherTranslateCommon.h  LauncherUpdate.cpp  LauncherUpdate.h  launcher.cmake
WebsiteEmpireLib/: CMakeLists.txt  CountryLangManager.cpp  CountryLangManager.h  ExceptionWithTitleText.cpp  ExceptionWithTitleText.h  WebsiteEmpireLib.cpp  WebsiteEmpireLib.h
WebsiteEmpireLib/aspire/: AbstractPageAttributes.cpp  AbstractPageAttributes.h  AspiredDb.cpp  AspiredDb.h  aspire.cmake
WebsiteEmpireLib/website/: AbstractBlock.cpp  AbstractBlock.h  AbstractEngine.cpp  AbstractEngine.h  EngineArticles.cpp  EngineArticles.h  EngineLanguages.cpp  EngineLanguages.h  HostTable.cpp  HostTable.h  ImageWriter.cpp  ImageWriter.h  WebCodeAdder.h  WebsiteSettingsTable.cpp  WebsiteSettingsTable.h  website.cmake
WebsiteEmpireTests/: CMakeLists.txt  test_blocks.cpp  test_category_hub_dirty_set.cpp  test_category_hub_syncer.cpp  test_common_bloc_translations.cpp  test_engine_page_bloc_js.cpp  test_generation_coroutine.cpp  test_generation_workflow.cpp  test_launcher_translate_modes.cpp  test_launcher_update_svg.cpp  test_page_db.cpp  test_page_generator.cpp  test_page_repository.cpp  test_page_type_article.cpp  test_page_type_registry.cpp  test_social_media.cpp  test_translation_field_table.cpp  test_translation_helpers.h  test_translation_page_assessor.cpp  test_translation_protocol.cpp  test_translation_scheduler.cpp  test_translation_settings.cpp  test_translation_status_table.cpp  test_website_commonbloc_menu_permalink.cpp  test_website_engine_articles.cpp  test_website_engine_languages.cpp  test_website_gen_strategy_table.cpp  test_website_page_bloc_category.cpp  test_website_page_bloc_category_links.cpp  test_website_page_bloc_image_category.cpp  test_website_page_bloc_image_links.cpp  test_website_page_bloc_meta.cpp  test_website_page_bloc_text.cpp  test_website_page_state_formatter.cpp  test_website_review_action.cpp  test_website_robots_writer.cpp  test_website_settings.cpp  test_website_shortcodes.cpp  test_website_sitemap_chunk_writer.cpp  test_website_sitemap_index_writer.cpp  (+3 more)
(+409 files in other folders)
